[package]
name = "wow_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
binread = "2.2.0"
bitvec = "1.0.1"
clap = { version = "3.2.22", features = ["derive"] }
thiserror = "1.0.36"
