[package]
name = "wow_chunky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
binread = "2.2.0"
bitvec = "1.0.1"
clap = { version = "3.2.22", features = ["derive"] }
png = "0.17.6"
texpresso = "2.0.1"
thiserror = "1.0.36"
