[package]
name = "wow_chunky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2.0"
bitvec = "1.0.1"
clap = { version = "3.2.22", features = ["derive"], optional = true }
image = { version = "0.24.4", optional = true }
texpresso = "2.0.1"
thiserror = "1.0.36"

[features]
inspect = ["clap", "image"]

[[bin]]         
name = "inspect"    
required-features = ["inspect"]